// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dollar-sign.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$

\\$

\\\\$

\\\\\\$

=====================================output=====================================
$

\\$

\\\\$

\\\\\\$

================================================================================
`;

exports[`empty-block.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$$
$$

=====================================output=====================================
$$
$$

================================================================================
`;

exports[`math-like.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$10 - $20

Paragraph with $14 million.    But if more $dollars on the same line...

=====================================output=====================================
$10 - $20

Paragraph with $14 million. But if more $dollars on the same line...

================================================================================
`;

exports[`remark-math.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha$

---

$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango
$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$
$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

  $$$
    \\alpha
  $$$

---

$$  must
\\alpha
$$

---

$$
\\alpha
$$
\`\`\`
code fence
\`\`\`

=====================================output=====================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha$

---

$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango

$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$

$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

$$
  \\alpha
$$

---

$$
must
\\alpha
$$

---

$$
\\alpha
$$

\`\`\`
code fence
\`\`\`

================================================================================
`;
